--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4caf50;
-  color: #ffffff;
+  background-color: #c1cc20;
+  color: black;
   font-weight: bold;
   font-size: 24px;
   box-sizing: border-box;
